--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "bakend"
   ],
   "dependencies": {
-    "@testing-library/react": "^16.3.0",
     "ajv": "8.12.0",
     "ajv-keywords": "5.1.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
     "@types/jest": "^29.5.14",
-    "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.5",
-    "@types/testing-library__react": "^10.0.1",
-    "concurrently": "^9.1.2"
+    "@types/node": "^22.15.23",
+    "concurrently": "^9.1.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.4",
+    "typescript": "^5.8.3"
   },
   "scripts": {
-    "start": "concurrently \"npm run start --workspace=bakend\" \"npm run start --workspace=frontend\""
+    "start": "concurrently \"npm run start --workspace=bakend\" \"npm run start --workspace=frontend\"",
+    "test": "concurrently \"npm run test --workspace=bakend\" \"npm run test --workspace=frontend\""
   }
 }
